[package]
name = "rg_winit_window"
version = "0.12.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]
keywords = ["winit", "window", "piston"]
description = "A winit back-end for pistoncore-window"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pistondevelopers/winit_window.git"
homepage = "https://github.com/pistondevelopers/winit_window"

[features]
default = []
use-vulkano = ["vulkano", "vulkano-win"]

[lib]
name = "rg_winit_window"
path = "src/lib.rs"

[dependencies]
winit = { path = "../winit", features = ['web-sys'] }
pistoncore-input = "0.28.0"
pistoncore-window = "0.44.0"
glow = "0.4.0"

[dependencies.vulkano]
version = "0.11"
optional = true

[dependencies.vulkano-win]
version = "0.11"
optional = true
